--- a/templates/config.j2
+++ b/templates/config.j2
@@ -1,8 +1,13 @@
 #jinja2:lstrip_blocks: True
 
 {% for key in ssh_keys %}
+# {{ key.comment or key.host }}
 Host {{ key.host }}
+  {%- if key.hostname %}
+  Hostname {{ key.hostname }}
+  {% endif %}
   AddKeysToAgent yes
   UseKeychain yes
+  PreferredAuthentications publickey
   IdentityFile {{ ansible_env.HOME + '/.ssh/' + key.name }}
 {% endfor %}
